// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 1`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-green focus:bg-green"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            Sélectionnez
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 2`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-blue focus:bg-blue"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 3`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-blue focus:bg-blue"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 4`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-orange focus:bg-orange"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 5`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-orange focus:bg-orange"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 6`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-red focus:bg-red"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 7`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-red focus:bg-red"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 8`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-green focus:bg-green"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 9`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-green focus:bg-green"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 10`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-yellow focus:bg-yellow-500"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`BSelect.vue renders with the appropriate classes based on the "outlined" prop 11`] = `
<div
  class="space-y-1 w-full h-10"
>
  <label
    class="block text-sm leading-5 font-medium text-gray-700 h-full"
    id="listbox-label"
  />
   
  <div
    class="relative h-full"
  >
    <span
      class="inline-block w-full rounded-md shadow-sm h-full"
    >
      <button
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="listbox-label"
        class="cursor-pointer relative w-full h-full rounded-md border border-gray-300 bg-white pl-3 pr-10 py-2 text-left focus:outline-none focus:shadow-outline-blue focus:border-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5 text-gray-900 select-none relative py-2 pl-3 pr-9  cursor-pointer hover:text-white focus:outline-none focus:text-white hover:bg-yellow focus:bg-yellow-500"
        id="openButton"
        type="button"
      >
        <div
          class="flex items-center space-x-3 h-full"
        >
          <span
            class="block truncate"
          >
            
            
          
          </span>
        </div>
         
        <span
          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
        >
          <svg
            class="h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              d="M7 7l3-3 3 3m0 6l-3 3-3-3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </button>
    </span>
     
    <div
      class="absolute mt-1 w-full rounded-md bg-white shadow-lg"
      style="display: none;"
    >
      <ul
        aria-activedescendant="listbox-item-3"
        aria-labelledby="listbox-label"
        class="max-h-56 rounded-md py-1 text-base leading-6 shadow-xs overflow-auto focus:outline-none sm:text-sm sm:leading-5"
        role="listbox"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;
